<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8164.2" systemVersion="15A235d" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Z36-Wm-hOV">
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8135.1"/>
    </dependencies>
    <scenes>
        <!--Menu-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="MenuViewController" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1JE-yd-SkL">
                                <rect key="frame" x="275" y="80" width="51" height="31"/>
                                <animations/>
                                <accessibility key="accessibilityConfiguration" label="View Detail Enabled Switch"/>
                                <connections>
                                    <action selector="switchValueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="qIM-w7-eRm"/>
                                </connections>
                            </switch>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ual-Lw-Pgf">
                                <rect key="frame" x="180" y="137" width="240" height="45"/>
                                <animations/>
                                <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="240" id="Jlh-OW-OkF"/>
                                    <constraint firstAttribute="height" constant="45" id="Xgw-j3-Wbb"/>
                                </constraints>
                                <state key="normal" title="View Detail">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <segue destination="37n-Dp-zEJ" kind="show" id="JF1-Hv-m8P"/>
                                </connections>
                            </button>
                        </subviews>
                        <animations/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="1JE-yd-SkL" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="LuQ-6K-oYU"/>
                            <constraint firstItem="Ual-Lw-Pgf" firstAttribute="top" secondItem="1JE-yd-SkL" secondAttribute="bottom" constant="26" id="UeI-9w-oGf"/>
                            <constraint firstItem="Ual-Lw-Pgf" firstAttribute="centerX" secondItem="1JE-yd-SkL" secondAttribute="centerX" id="iK4-m5-Ffk"/>
                            <constraint firstItem="1JE-yd-SkL" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="16" id="t4S-FN-Gdb"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Menu" id="3W6-Dq-rbn"/>
                    <connections>
                        <outlet property="viewDetailButton" destination="Ual-Lw-Pgf" id="Aa7-de-ubE"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="673" y="305"/>
        </scene>
        <!--Detail-->
        <scene sceneID="7RS-kd-1Mt">
            <objects>
                <viewController title="Detail" id="37n-Dp-zEJ" customClass="DetailViewController" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="ugh-ri-ydL"/>
                        <viewControllerLayoutGuide type="bottom" id="efI-m2-DwI"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="XS1-WX-MoB">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YAw-wK-I0Q">
                                <rect key="frame" x="180" y="80" width="240" height="45"/>
                                <animations/>
                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="240" id="IpJ-UO-w17"/>
                                    <constraint firstAttribute="height" constant="45" id="ZJN-Rm-cBa"/>
                                </constraints>
                                <state key="normal" title="Increment Value">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="incrementTapped:" destination="37n-Dp-zEJ" eventType="touchUpInside" id="H5j-fC-hEa"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8pL-Js-duI">
                                <rect key="frame" x="285.5" y="271.5" width="29.5" height="57.5"/>
                                <animations/>
                                <accessibility key="accessibilityConfiguration" identifier="Number Value Label" label=""/>
                                <fontDescription key="fontDescription" type="system" pointSize="48"/>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <animations/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="8pL-Js-duI" firstAttribute="centerX" secondItem="XS1-WX-MoB" secondAttribute="centerX" id="1m6-jB-aae"/>
                            <constraint firstItem="8pL-Js-duI" firstAttribute="centerY" secondItem="XS1-WX-MoB" secondAttribute="centerY" id="fz1-US-bJY"/>
                            <constraint firstItem="YAw-wK-I0Q" firstAttribute="centerX" secondItem="XS1-WX-MoB" secondAttribute="centerX" id="q2X-Np-XwX"/>
                            <constraint firstItem="YAw-wK-I0Q" firstAttribute="top" secondItem="ugh-ri-ydL" secondAttribute="bottom" constant="16" id="qp1-c9-xeX"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="valueLabel" destination="8pL-Js-duI" id="4aZ-aL-0zJ"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="xoi-o4-aXa" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1365" y="305"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="ixM-Cq-1sp">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Z36-Wm-hOV" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Vgj-Nd-G5l">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <animations/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="HmM-sP-Mo9"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="w5e-1z-XtR" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="673" y="-431"/>
        </scene>
    </scenes>
</document>
